[package]
name = "perlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
isahc = "1.7"
abserde = "0.3.3"
serde = {version = "1.0.140", features = ["derive"]}
window_titles = { git = "https://github.com/HiruNya/window_titles"}
linkify = "0.9.0"