[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

[package]
name = "perlink"
version = "0.1.3"
edition = "2021"
description = "perlink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.4"
dotenv = "0.15.0"
app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
human-panic = { git = "https://github.com/visnkmr/save-crash-logs-rs" }
prefstore = { git = "https://github.com/visnkmr/prefstore/" }
isahc = { features = ["text-decoding"], default-features = false, version = "1.7.2" }
# execute = "0.2.11"
# abserde = {version="0.4.1", features= ["toml"], default-features = false }
# prefstore="0.5.0"
# prefstore={path="./../prefstore/prefstore"}
# abserde = "0.3.3"
serde = {version = "1.0.163", default-features = false }
window_titles = { git = "https://github.com/HiruNya/window_titles"}
linkify = "0.9.0"
arboard = { default-features = false, version = "3.2.0" }
indexmap = { version = "1.9.3", features = ["serde"] }
# opentelemetry = { version="0.16", features = ["serialize", "rt-tokio"] }
# opentelemetry-jaeger = { version="0.15", features = ["rt-tokio"] }
tokio = { version = "1.28.2", features = ["full","tracing"] }
# opentelemetry-http="0.8.0"
tracing="0.1.37"
tracing-subscriber="0.3.17"
# Implements the types defined in the Otel spec
opentelemetry = "0.17.0"
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = "0.17.2" 
# Allows you to export data to Jaeger
opentelemetry-jaeger = "0.16.0"

[package.metadata.bundle]
name = "perlink"
identifier = "visnk.perlink"
#description = "perlink"